src/c_bindings/edipack_cbindings.h

/*!
\rst
This function sets the local Hamiltonian.
Interfaces to :f:func:`f/ed_aux_funx/ed_set_Hloc`.
Rank-2 array variant for single-site DMFT
\endrst
*
* @param Hloc: the local Hamiltonian
* @param d: array of dimensions of the local Hamiltonian
*/
void ed_set_Hloc_single_N2(std::complex<double> *Hloc, 
                           int64_t *d
                           );
/*!
\rst
This function sets the local Hamiltonian.
Interfaces to :f:func:`f/ed_aux_funx/ed_set_Hloc`.
Rank-4 array variant for single-site DMFT.
\endrst
*
* @param Hloc: the local Hamiltonian
* @param d: array of dimensions of the local Hamiltonian
*/       
void ed_set_Hloc_single_N4(std::complex<double> *Hloc, 
                           int64_t *d
                           );
                           
                           
/*!
\rst
This function sets the local Hamiltonian.
Interfaces to :f:func:`f/e2i_aux_funx/ed_set_Hloc`.
Rank-2 array variant for real-space DMFT.
\endrst
*
* @param Hloc: the local Hamiltonian
* @param d: array of dimensions of the local Hamiltonian
* @param Nlat: number of inequivalent sites
*/                      
void ed_set_Hloc_lattice_N2(std::complex<double> *Hloc,
                            int64_t *d,
                            int Nlat
                            );
/*!
\rst
This function sets the local Hamiltonian.
Interfaces to :f:func:`f/e2i_aux_funx/ed_set_Hloc`.
Rank-3 array variant for real-space DMFT.
\endrst
*
* @param Hloc: the local Hamiltonian
* @param d: array of dimensions of the local Hamiltonian
* @param Nlat: number of inequivalent sites
*/ 
void ed_set_Hloc_lattice_N3(std::complex<double> *Hloc,
                            int64_t *d,
                            int Nlat
                            );
/*!
\rst
This function sets the local Hamiltonian.
Interfaces to :f:func:`f/e2i_aux_funx/ed_set_Hloc`.
Rank-5 array variant for real-space DMFT.
\endrst
*
* @param Hloc: the local Hamiltonian
* @param d: array of dimensions of the local Hamiltonian
* @param Nlat: number of inequivalent sites
*/ 
void ed_set_Hloc_lattice_N5(std::complex<double> *Hloc, 
                            int64_t *d, 
                            int Nlat
                            );
/*!
\rst
This function updates a variable (usually the chemical potential) trying to 
achieve a desired density set by :f:var:`nread`.
Interfaces to :f:func:`ed_search-variable`.
\endrst
*
* @param var: the variable to be adjusted
* @param ntmp: the density value at a given iteration
* @param converged: the DMFT loop convergence status.
*/ 
void search_variable(double *var,
                    double *ntmp, 
                    int64_t *converged
                    );